Updated summary of changes

--- a/README
+++ b/README
@@ -1,52 +1,4 @@
 This is a fork of vitunes. Just a few minor tweaks that made this a little
-more useful for me. The diff follows below. Basically I added key bindings
-for a "next song" function and an external file-based interface so I could
-use hotkeys to control vitunes. The makefile was only modified to help it
-compile on Mac OS X.
-
-Makefile:
-13c13
-< LDFLAGS+=-lm -lncursesw -lutil $(LDEPS)
----
-> LDFLAGS+=-lm -lncurses -lutil $(LDEPS)
-keybindings.c:
-61a62
->    { media_next,              "media_next" }, 
-115a117
->    {  media_next,             kba_next,            ARG_NOT_USED },
-1364a1367,1371
-> void kba_next(KbaArgs a UNUSED)
-> {
-  >    player_play_next_song();
-> }
-> 
-keybindings.h:
-74a75
->    media_next,
-139a141
-> void kba_next(KbaArgs a);
-vitunes.c:
-166a167,173
->    /* scripting hack */
->    FILE* script_file;
->    char script_filename[256];
->    char script_input[10];
->    strcpy( script_filename, getenv("HOME") );
->    strcat( script_filename, "/.vitunes_script" );
-> 
-185a193,207
->       /* input file for scripting */
->       else if ( gnum_get() == 0 )
->       {
-  >          script_file = fopen( script_filename, "r+" );
->    if ( script_file )
->    {
->       if ( fgets( script_input, 9, script_file ) )
->       {
-  >          kb_execute( script_input[0] );
-  >          fclose( script_file );
-  >          remove( script_filename );
->       }
->    }
->       }
-> 
+more useful for me. Basically I added external input functionality so I
+could control vitunes from other applications, and I modified the makefile
+so it would compile properly on Mac OS X.
