--- a/README
+++ b/README
@@ -7,3 +7,4 @@ Summary of bugs fixed (from original upstream version):
    - memory leak fixed in str2argv
    - memory leak fixed in playlist_free
    - closed and unlinked socket when exiting
+   - default playlist mode was being ignored in config.h and config file
